# asra

./: .gitignore
OSF-Submission/: README.md  (+1 more)
asra-arc/: .env.example  .gitignore  README.md  pyproject.toml
asra-arc/data/analysis/graph_viz/: visualization_skipped.txt
asra-arc/data/analysis/hash_stability/: hash_stability_report.txt  state_statistics.csv  transition_graph.graphml
asra-arc/data/decision_biology/analysis/: decision_biology_combined_report.json
asra-arc/data/decision_biology/lincs/: README.md
asra-arc/data/episodes/: 5830e744-ad91-4cbb-93be-f38949366c7e.json  866fcdaf-d29e-483a-9b9a-2189d0f62b86.json  ae6b078f-e36d-4145-ad53-e1cb072b55d3.json  c14be48f-81a8-4731-9cc1-e2cf528064eb.json  ffa89f71-26d1-438d-b1b4-7f33a66d8ed5.json
asra-arc/data/exports/: asra_v0_1_episode_summary.csv  asra_v0_1_state_graph.json  asra_v0_1_transitions.jsonl  asra_v0_1_transitions.parquet
asra-arc/data/graphs/: state_graph.graphml
asra-arc/data/large_scale/episodes/: 0004baa6-53e2-424c-96e8-c9ea1b2be3d0.json  (+5421 more)
asra-arc/data/raw/: sample_arc_agi3_replay.json
asra-arc/data/transitions/: 90f22b69-138c-4695-a019-95cf26bef1d3.jsonl  ff51d6a1-19aa-4589-b89a-f2caf19b4fd9.jsonl  ffa89f71-26d1-438d-b1b4-7f33a66d8ed5.jsonl
asra-arc/scripts/: hash_stability_analysis.py  run_large_scale.py
asra-arc/scripts/decision_biology/: run_decision_biology_experiments.py
asra-arc/src/asra/: __main__.py
asra-arc/tests/: test_dead_end_detector.py  test_episode_logger.py  test_frame_parser.py  test_grid_diff.py  test_hashing.py  test_runner_pipeline.py  test_state_graph.py
(+16772 files in other folders)
