[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "asra-arc"
version = "0.1.0"
description = "ASRA v0.1 baseline agent for ARC-AGI-3 transition logging"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "PyYAML>=6.0",
  "pandas>=2.0",
  "pyarrow>=15.0",
]

[project.optional-dependencies]
viewer = ["streamlit>=1.30"]
graph = ["networkx>=3.0"]
analysis = ["networkx>=3.0", "matplotlib>=3.7"]
dev = ["pytest>=8.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/asra"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
